<resources>
    <string name="app_name">Calculator</string>
    <string name="default_result">0</string>
    <string name="default_operation">_</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="comma">,</string>
    <string name="clearAll">C</string>
    <string name="clear">R</string>
    <string name="percent">%</string>
    <string name="unknown">¯\_(ツ)_/¯</string>
    <string name="equals">=</string>
    <string name="title_activity_main_page">main_page</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>